fix unvisible video by tovi@openapp

--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,9 @@ input#searchtext {
 .hiddenfromstudents {
     color:gray !important;
 }
+.notdisplaytostudents {
+    display: none !important;
+}
 /*
 .colwidth {
 width: 30%;
